some edit on document.

--- a/Documents/Clinic Management Software.tex
+++ b/Documents/Clinic Management Software.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = fa
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{report}
 
 \usepackage{color}
 \usepackage{xcolor}
@@ -79,9 +79,13 @@
 		یکشنبه، ۶ اردیبهشت ۱۳۹۹
 	}
 
+	\tableofcontents
 	\maketitle
-	%\part{\lr{RFP}}
-	\section*{تعریف}\label{chap13}
+	\chapter{
+	مستندات طراحی}
+	\section*{
+		مقدمه}
+	\label{chap13}
 	
 	درمانگاه یا کلینیک 
 	\LTRfootnote{\lr{Clinic /ˈklɪnɪk/}}
@@ -159,7 +163,7 @@
 		\item
 		$5$ میلیون هزینه سرور محلی.
 	\end{enumerate}
-
+	\pagebreak
 	\section{تخمین زمان}\label{sec6}
 	\begin{figure}[!h]
 		\label{fig1:sec6}
@@ -226,10 +230,13 @@
 	\end{figure}
 
 	\pagebreak
-	%\part{\lr{UML}}
+	\chapter{
+	مستندات پیاده سازی}
+	\pagebreak
 	\section{
 		نمودار 
-		\lr{UseCase}}\label{sec8}
+	\lr{UseCase}}\label{sec8}
+	\vspace{-2cm}
 	\begin{figure}[!h]
 		\label{fig1:sec8}
 		\begin{center}
