--- a/Documents/Clinic Management Software.tex
+++ b/Documents/Clinic Management Software.tex
@@ -91,7 +91,7 @@
 	
 	\begin{center}
 		{
-			\qquad\InTheNameOfGod 1
+			\qquad\InTheNameOfGod 8
 		}
 	\end{center}
 	\title{
@@ -146,7 +146,7 @@
 		
 	\end{enumerate}
 	\section{تیم طراحی}\label{sec2:chap1}
-	طراحی این نرمافزار شامل تیمی متشکل از:
+	طراحی این نرم‌افزار شامل تیمی متشکل از:
 	\begin{itemize}[nosep]\label{item1:sec2:chap1}
 		\item 
 		تحلیل‌گر و طراحی سیستم.
